--- a/paguina.html
+++ b/paguina.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>ProgramaYa!</title>
-    <link rel="stylesheet" href="./paguina.css">
+    <link rel="stylesheet" href="paguina.css">
 </head>
 <body>
     <header>
